--- a/sugestao_inteligente.ipynb
+++ b/sugestao_inteligente.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNABjXILHlO9i9nzw014FtD",
+      "authorship_tag": "ABX9TyPmTA88SaWzkC9Q7ElsMjZr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,6 @@
         "import pandas as pd\n",
         "import requests\n",
         "import google.generativeai as gemini\n",
-        "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
       "metadata": {
@@ -44,7 +43,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Insira sua chave da GOOGLE API"
+        "### Insira sua chave da GOOGLE API ###"
       ],
       "metadata": {
         "id": "QEScfH8s4Sn7"
@@ -53,7 +52,7 @@
     {
       "cell_type": "code",
       "source": [
-        "GOOGLE_API_KEY = \"AIzaSyC_8vXiSARM3xd7BzPay7wlB3thxGE_ByI\"\n",
+        "GOOGLE_API_KEY = \"SUA CHAVE DA API GOOGLE\"\n",
         "gemini.configure(api_key=GOOGLE_API_KEY)"
       ],
       "metadata": {
